fix video for ci in Attach and TestBase